# speech-jobs-backend

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  THIRD_PARTY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 2dbbb7d95cf8_add_job_heartbeat_tracking.py  be857cdb2cd2_initial_schema.py
examples/: README.md
src/app/: README.md  __init__.py  main.py
src/app/api/: README.md  dependencies.py
src/app/api/routes/: __init__.py  health.py  jobs.py
src/app/api/schemas/: jobs.py
src/app/core/: __init__.py  settings.py
src/app/db/: README.md  __init__.py  base.py  config.py  models.py
src/app/services/: README.md  __init__.py  uploads.py
src/app/worker/: README.md  __init__.py  asr.py  cleanup.py  diarization.py  main.py  runtime_checks.py  service.py  silence.py
tests/: README.md  test_critical_flows.py  test_health.py  test_job_upload_api.py  test_jobs_api.py  test_worker_asr.py  test_worker_cleanup.py  test_worker_diarization.py  test_worker_lifecycle.py  test_worker_main.py  test_worker_recovery.py  test_worker_runtime_checks.py  test_worker_silence.py
